@@ -46,6 +46,7 @@ wxTextPos               T_IV
 wxTextAttrAlignment     T_ENUM
 wxIdleMode              T_ENUM
 wxDouble                T_DOUBLE
+wxAnimationType         T_ENUM
 
 wxFindReplaceDialogStyles T_ENUM
 wxFindReplaceFlags      T_ENUM
@@ -106,6 +107,7 @@ wxMenuBar *             O_WXOBJECT
 wxMenu *                O_WXOBJECT
 wxMenuItem *            O_WXOBJECT
 
+wxAnimationCtrl *       O_WXEVTHANDLER
 wxStatusBar *           O_WXEVTHANDLER
 wxToolBar *             O_WXEVTHANDLER
 wxToolBarBase *         O_WXEVTHANDLER
@@ -278,6 +280,7 @@ wxPliTreeItemData *     O_NON_WXOBJECT
 wxTreeItemData *        O_NON_WXOBJECT
 wxTreeItemId *          O_NON_WXOBJECT_THR
 
+wxAnimation *           O_WXOBJECT_THR
 wxFontMapper *          O_NON_WXOBJECT
 wxFontEnumerator *      O_NON_WXOBJECT_THR
 wxNativeFontInfo *      O_NON_WXOBJECT_THR
